Jenkins: enable user namespaces

--- a/kubernetesPod.yaml
+++ b/kubernetesPod.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     ci: shinyproxy-build
 spec:
+  hostUsers: false
   volumes:
     - name: docker-socket
       emptyDir: { }
