--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.5</version>
+        <version>3.4.10</version>
         <relativePath/>
     </parent>
 
@@ -32,14 +32,17 @@
         <resource.delimiter>&amp;</resource.delimiter>
         <!-- Dependency versions -->
         <containerproxy.version>1.3.0-SNAPSHOT</containerproxy.version>
-        <spring-boot.version>3.4.5</spring-boot.version>
+        <spring-boot.version>3.4.10</spring-boot.version>
         <datatables.version>1.13.5</datatables.version>
         <datatables-buttons.version>2.4.1</datatables-buttons.version>
         <datatables-responsive.version>2.2.7</datatables-responsive.version>
         <handlebars.version>4.7.7</handlebars.version>
+        <sqlite-jdbc.version>3.50.3.0</sqlite-jdbc.version>
+        <commons-lang3.version>3.19.0</commons-lang3.version>
         <!-- Plugin versions -->
         <maven.license-plugin.version>4.6</maven.license-plugin.version>
         <maven.build-helper-maven.plugin.version>3.6.0</maven.build-helper-maven.plugin.version>
+        <maven.dependency-check-plugin.version>12.1.7</maven.dependency-check-plugin.version>
     </properties>
 
     <distributionManagement>
@@ -141,6 +144,17 @@
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!-- Bumped for CVEs: -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sqlite-jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 
@@ -320,7 +334,7 @@
                     <plugin>
                         <groupId>org.owasp</groupId>
                         <artifactId>dependency-check-maven</artifactId>
-                        <version>9.0.9</version>
+                        <version>${maven.dependency-check-plugin.version}</version>
                         <configuration>
                             <suppressionFiles>
                                 <suppressionFile>owasp-suppression.xml</suppressionFile>
