--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <datatables-buttons.version>2.4.1</datatables-buttons.version>
         <datatables-responsive.version>2.2.7</datatables-responsive.version>
         <handlebars.version>4.7.7</handlebars.version>
+        <sqlite-jdbc.version>3.50.3.0</sqlite-jdbc.version>
+        <commons-lang.version>3.18.0</commons-lang.version>
         <!-- Plugin versions -->
         <maven.license-plugin.version>4.6</maven.license-plugin.version>
         <maven.build-helper-maven.plugin.version>3.6.0</maven.build-helper-maven.plugin.version>
@@ -126,6 +128,16 @@
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sqlite-jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
